# aurmr_tahoma

./: .gitignore  .gitmodules  README.md
aurmr_hri/: CMakeLists.txt  package.xml
aurmr_hri/action/: MaskObject.action  RetryGrasp.action  SpecifyGraspPose.action
aurmr_hri/launch/: fallback_interfaces.launch
aurmr_hri/scripts/: 3dmouse_controller  emulate_failed_grasp  human_grasp_pose_server  human_mask_object_server  test_human_mask_object_server
aurmr_perception/: CMakeLists.txt  README.md  out.txt  package.xml  setup.py
aurmr_perception/launch/: aurmr_grasping.launch  aurmr_perception.launch  aurmr_perception_clustering.launch
aurmr_perception/nodes/: aurmr_grasping  aurmr_perception  client  grasp_detection_server  realsense_subscriber
aurmr_perception/scripts/: bin_bound_calculation  camera_calibration.py  pod_calibration_sub.py  pod_calibration_sub_side1.py  pod_calibration_sub_side2.py
aurmr_perception/src/: calib.npz  pod_calibration_sub_side1.py  pod_calibration_sub_side2.py
aurmr_perception/src/aurmr_perception/: bin_model.py  depth_utils.py  diff_pod_model.py  gqcnn_hardware_comms.py  grasp_detection.py  grasping.py  graspnet.py  pod_model.py  segnet_pod_model.py  test_data_real_world.py  test_depth_anything_dexnet.py  (+4 more)
aurmr_perception/srv/: ActOnBins.srv  CaptureObject.srv  DetectGraspPoses.srv  DetectGraspPosesTable.srv  GetObjectMasks.srv  GetObjectPoints.srv  GraspPose.srv  LoadDataset.srv  ResetBin.srv
aurmr_tasks/: CMakeLists.txt  package.xml  setup.py
aurmr_tasks/config/: analyze_workspace.rviz
aurmr_tasks/launch/: throttle_topics.launch  tof.launch
aurmr_tasks/msg/: PickStatus.msg
aurmr_tasks/scripts/: Reachibility_test.py  Reachibility_test_2.py  analyze_workspace  analyze_workspace_LOOPED  analyze_workspace_launcher.py  analyze_workspace_old  aurmr_demo  aurmr_demo_ToF  aurmr_demo_binhome  aurmr_demo_binhome_manipulability  aurmr_demo_copy  aurmr_demo_human  aurmr_demo_iktest.py  aurmr_demo_klaus  aurmr_demo_large_bins  aurmr_stow  check_gripper  grasp_check  handeye_calibration_test  human_as_robot  manual_stow  move_to_calibration_poses  pick  pick_logger  pick_vacuum  plot_data.py  plot_score.py  stow_and_detect_grasps  successScores1_720-960-10_360-580-10.txt  successScores23_720-970-10_360-580-10.txt  successScores_60-100-2_00-93-3.txt  successScores_600-1000-25_220-940-80.txt  successScores_62-100-2_00-93-3.txt  successScores_720-960-20_360-580-20.txt  successScores_832-832_412-412.txt  successScores_832-832_412-412_0.txt  successScores_940-960_520-540.txt  successScores_940-960_550-570.txt  take_image  test_cartesian  (+4 more)
aurmr_tasks/srv/: ClearRequest.srv  MultiplePickRequest.srv  PickRequest.srv  StowRequest.srv  ToF.srv
aurmr_unseen_object_clustering/: CMakeLists.txt  README.md  conda_env.yaml  package.xml  setup.py
aurmr_unseen_object_clustering/nodes/: uois_service
aurmr_unseen_object_clustering/scripts/: demo_client.py  demo_client_vita.py  demo_service.py  demo_service_vita.py  demo_service_vlm.py  detect_false_masks.py
aurmr_unseen_object_clustering/srv/: GetSegmentationUOIS.srv
aurmr_vacuum_gripper/vacuum_gripper_action_server/: CMakeLists.txt  package.xml
aurmr_vacuum_gripper/vacuum_gripper_control/: CMakeLists.txt  package.xml  setup.py
tahoma_bringup/: CMakeLists.txt  package.xml
tahoma_bringup/config/: 99-usb-cam.rules  controllers.yaml  controllersbackup.yaml  gripper_camera_calibration.yaml
tahoma_bringup/launch/: calibration.launch  camera.launch  logging.launch  pod_bringup.launch  tahoma_bringup.launch  tahoma_bringup_storm.launch  tahoma_bringup_storm2.launch  usb_camera.launch
tahoma_bringup/scripts/: fake_gripper_state
tahoma_description/: CMakeLists.txt  README.md  package.xml
tahoma_description/config/: arm_calibration.yaml  camera_calibration_poses.yaml  end_effector_sizes.yaml  pod1_recipe_790-00265-021_2.txt  pod2_recipe_790-00265-022_2.txt  pod_location_calibration.rviz  pod_sizes.yaml  view_camera_test.rviz  view_model.rviz
tahoma_description/launch/: .gitignore  camera_lower_left_transform.launch  camera_lower_right_transform.launch  camera_wrist_transform.launch  load_pod.launch  load_tahoma.launch  pod_calibration.launch  pod_transform.launch  view_camera_test.launch  view_model.launch  view_models.launch
tahoma_description/meshes/: camera_mount_tilted_left.stl  camera_mount_tilted_right.stl  d405.dae  l515.dae  robotiq_gripper_coupling.stl
tahoma_description/robots/: pod.xacro  pod1.xacro  pod2.xacro  tahoma.xacro
tahoma_description/scripts/: pod_location_calibration
tahoma_description/simox/: tahoma_simox.urdf
tahoma_description/urdf/: _d435.urdf.xacro  _d455.urdf.xacro  _l515.urdf.xacro  azure_kinect.urdf.xacro  camera_mount_tilted.xacro  camera_test.xacro  caster.xacro  d405.xacro  l515.xacro  light_panel.xacro  pod.xacro  pod1.xacro  pod2.xacro  pod_frame.xacro  shelf_stack.xacro  stand.xacro  tahoma.xacro  tahoma_old.xacro
tahoma_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
tahoma_moveit_config/action/: ServoToPose.action
tahoma_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  rviz.rviz  servo.yaml  stomp_planning.yaml  tahoma.srdf
tahoma_moveit_config/env-hooks/: tahoma_moveit_config.bash  tahoma_moveit_config.zsh
tahoma_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  servo.launch  setup_assistant.launch  stomp_planning_pipeline.launch.xml  tahoma_moveit_controller_manager.launch.xml  tahoma_moveit_planning_execution.launch  tahoma_robot_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
tahoma_moveit_config/src/: pose_tracking.cpp  servo_server.cpp
tahoma_moveit_config/tests/: moveit_planning_execution.xml
(+83 files in other folders)
