<?xml version="1.0"?>
<package format="2">
  <name>aurmr_hri</name>
  <version>1.0.0</version>
  <description>
    Emulation scripts for HRI tasks
  </description>
  <license>MIT</license>
  <maintainer email="amazon-manipulation@cs.washington.edu">AURMR Contributors</maintainer>
  <author email="amazon-manipulation@cs.washington.edu">AURMR Contributors</author>

  <build_depend>roslint</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>